--- a/tests/conf_playground.html
+++ b/tests/conf_playground.html
@@ -232,6 +232,15 @@ h1 {
         <block type="robConf_ultrasonic"></block>
         <block type="robConf_light"></block>
         <block type="robConf_moisture"></block>
+        <block type="robConf_potentiometer"></block>
+        <block type="robConf_infrared"></block>
+        <block type="robConf_temperature"></block>
+        <block type="robConf_humidity"></block>
+        <block type="robConf_rotation"></block>
+        <block type="robConf_motion"></block>
+        <block type="robConf_pulse"></block>
+        <block type="robConf_drop"></block>
+        <block type="robConf_rfid"></block>
     </category>
 </toolbox_set>
 
