OpenRoberta/robertalab#756 added actor blocks to arduino configuration

--- a/tests/conf_playground.html
+++ b/tests/conf_playground.html
@@ -227,6 +227,14 @@ h1 {
 
 <toolbox_set id="toolbox" style="display: none">
     <category name="TOOLBOX_ACTION" svg="true">
+      <block type="robConf_lcd"></block>
+      <block type="robConf_lcdi2c"></block>
+      <block type="robConf_led"></block>
+      <block type="robConf_play"></block>
+      <block type="robConf_relay"></block>
+      <block type="robConf_rgbled"></block>
+      <block type="robConf_stepmotor"></block>
+      <block type="robConf_servo"></block>
     </category>
     <category name="TOOLBOX_SENSOR" svg="true">
         <block type="robConf_ultrasonic"></block>
