OpenRoberta/robertalab#817 added arduino sensors, started arduino atcors

--- a/tests/arduino_playground.html
+++ b/tests/arduino_playground.html
@@ -270,6 +270,17 @@ h1 {
 		<block type="robSensors_light_getSample"></block>
 		<block type="robSensors_ultrasonic_getSample"></block>
 		<block type="robSensors_moisture_getSample"></block>
+    <block type="robSensors_key_getSample"></block>
+    <block type="robSensors_timer_getSample"></block>
+    <block type="robSensors_temperature_getSample"></block>
+    <block type="robSensors_potentiometer_getSample"></block>
+    <block type="robSensors_infrared_getSample"></block>
+    <block type="robSensors_humidity_getSample"></block>
+    <block type="robSensors_encoder_getSample"></block>
+    <block type="robSensors_motion_getSample"></block>
+    <block type="robSensors_drop_getSample"></block>
+    <block type="robSensors_pulse_getSample"></block>
+    <block type="robSensors_rfid_getSample"></block>
 	</category>
 	<category name="TOOLBOX_CONTROL" svg="true">
 		<category name="TOOLBOX_DECISION" svg="true">
