--- a/tests/conf_playground.html
+++ b/tests/conf_playground.html
@@ -244,11 +244,12 @@ h1 {
         <block type="robConf_infrared"></block>
         <block type="robConf_temperature"></block>
         <block type="robConf_humidity"></block>
-        <block type="robConf_rotation"></block>
+        <block type="robConf_encoder"></block>
         <block type="robConf_motion"></block>
         <block type="robConf_pulse"></block>
         <block type="robConf_drop"></block>
         <block type="robConf_rfid"></block>
+        <block type="robConf_button"></block>
     </category>
 </toolbox_set>
 
