OpenRoberta/robertalab#756 added default values to the configuration blocks; added tooltips

--- a/tests/conf_playground.html
+++ b/tests/conf_playground.html
@@ -40,8 +40,8 @@
 <script src="../core/trashcan.js"></script>
 <script src="../blocks/text.js"></script>
 <script src="../blocks/lists.js"></script>
-<script src="../blocks/robConf.js"></script>
-<script src="../blocks/robConfDefs.js"></script>
+<script src="../blocks/robConfig.js"></script>
+<script src="../blocks/robConfigDefinitions.js"></script>
 <link rel="stylesheet" type="text/css" href="typicons.css"></link>
 
 <script>
