--- a/tests/microbit_playground.html
+++ b/tests/microbit_playground.html
@@ -50,7 +50,8 @@
         <script src="../blocks/mbedCommunication.js"></script>
         <script src="../blocks/mbedControls.js"></script>
         <script src="../blocks/mbedImage.js"></script>
-        <script src="../blocks/robControls.js"></script>
+		<script src="../blocks/sinoImage.js"></script>
+	<script src="../blocks/robControls.js"></script>
         <script src="../blocks/robSensors.js"></script>
         <script src="../blocks/robSensorDefinitions.js"></script>
         <link rel="stylesheet" type="text/css" href="typicons.css">
@@ -484,6 +485,7 @@
 		<block type="robLists_setIndex"></block>
 	</category>
 	<category name="TOOLBOX_IMAGE" svg="true">
+		<block type="sinoImage_image"></block>
 		<block type="mbedImage_image"></block>
 		<block type="mbedImage_shift">
 			<value name="B">
